# cfmms-rs

./: .gitignore  Cargo.toml  Makefile  README.md  book.toml  pool_sync_checkpoint.json  temp.sol
.github/workflows/: rust.yml
book/: README.md  SUMMARY.md
book/simulation/: README.md
book/sync/: README.md
contracts/lib/forge-std/lib/ds-test/src/: test.sol
contracts/test/: GetUniswapV3TickDataBatchRequest.t.sol
contracts/uniswap_v2/: GetUniswapV2PairsBatchRequest.sol  GetUniswapV2PoolDataBatchRequest.sol  SyncUniswapV2PoolBatchRequest.sol
contracts/uniswap_v3/: GetUniswapV3PoolDataBatchRequest.sol  GetUniswapV3TickDataBatchRequest.sol  GetUniswapV3TickInfoBatchRequest.sol  SyncUniswapV3PoolBatchRequest.sol
examples/: calculate-price.rs  create-new-pool.rs  filter.rs  generate-mainnet-checkpoint.rs  sim-swap.rs  sync-pairs-throttle-save-csv.rs  sync-pairs-throttle-save-data.rs  sync-pairs-throttle-save-parquet.rs  sync-pairs-with-ipc.rs  sync-pairs-with-throttle.rs  sync-pairs.rs  sync-pools-from-checkpoint.rs
src/: abi.rs  checkpoint.rs  dex.rs  error.rs  errors.rs  filter.rs  lib.rs  main.rs  pair.rs  pool.rs  sync.rs  throttle.rs
src/batch_requests/: mod.rs  uniswap_v2.rs  uniswap_v3.rs
src/batch_requests/uniswap_v2/: GetUniswapV2PairsBatchRequest.json  GetUniswapV2PoolDataBatchRequest.json  SyncUniswapV2PoolBatchRequest.json  mod.rs
src/batch_requests/uniswap_v3/: GetUniswapV3PoolDataBatchRequest.json  GetUniswapV3TickDataBatchRequest.json  SyncUniswapV3PoolBatchRequest.json  mod.rs
src/dex/: mod.rs  uniswap_v2.rs  uniswap_v3.rs
src/pool/: fixed_point_math.rs  fpm.rs  mod.rs  uniswap_v2.rs  uniswap_v3.rs
