[package]
name = "pair_sync"
version = "0.4.3"
edition = "2021"
license = "MIT"
description = "A simple library to get all pairs from any supported Dex and sync reserves."
readme = "README.md"
homepage = "https://github.com/0xKitsune/pair_sync"
repository = "https://github.com/0xKitsune/pair_sync"
keywords = ["ethereum", "mev", "dex"]


[dependencies]
ethers = { version = "0.17.0", features = ["abigen", "ipc"] }
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.24"
indicatif = "0.17.1"
thiserror = "1.0.36"
async-trait = "0.1.57"
serde_json = "1.0.85"
serde = "1.0.145"
num-bigfloat = "1.6.0"