[package]
name = "cfmms"
version = "0.2.23"
edition = "2021"
license = "MIT"
description = "CFMM lib built in Rust enabling pair syncing and swap simulation with pools on Ethereum."
readme = "README.md"
homepage = "https://github.com/0xKitsune/pair_sync"
repository = "https://github.com/0xKitsune/pair_sync"
keywords = ["ethereum", "mev", "dex", "cffms"]


[dependencies]
ethers = { version = "1.0.2", default-features = false, features = ["abigen", "ipc"] }
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.24"
indicatif = "0.17.1"
thiserror = "1.0.36"
async-trait = "0.1.57"
serde_json = "1.0.85"
serde = "1.0.145"
num-bigfloat = "1.6.0"
uniswap_v3_math = "0.2.22"
